Modified global gradle configuration